# dual-replay

./: .gitignore  README.md  main.py  program.md  pyproject.toml
configs/: autoresearch_override.yaml  autoresearch_override_proxy_clinc150_10.yaml  default.yaml
notes/: 2026-04-09-label-remapping-bug.md
paper/: Review 1 - Parameter-Efficient Dual-Replay, Mitigating Catastrophic Forgetting in Sequential LLM Fine-Tuning Under Fixed Memory Budgets - v1.md  Review 2 - Parameter-Efficient Dual-Replay, Mitigating Catastrophic Forgetting in Sequential LLM Fine-Tuning Under Fixed Memory Budgets.md  Review 3- Parameter-Efficient Dual-Replay, Mitigating Catastrophic Forgetting in Sequential LLM Fine-Tuning Under Fixed Memory Budgets.md  dual-replay-draft.md  implementation-plan.md  reproduction-plan.md  revision-plan.md
scripts/: autoresearch.py  autoresearch_15d.sh  make_figures.py  run_all_reviewer_exps.sh  run_dual_vs_single.sh  run_experiment.py  run_multiseed.sh  run_phase4.sh  run_three_methods.sh
src/: metrics.py
src/data/: __init__.py  banking77.py  clinc150.py  domain_sequence.py  hwu64.py
src/methods/: base.py  der.py  dual_replay.py  ewc.py  lora_only.py  lora_replay.py  lora_replay_dual.py  o_lora.py  replay_only.py  sequential_ft.py  utils.py
src/models/: adapters.py  domain_classifier.py  gating.py
src/replay/: buffer.py
src/training/: runner.py
tests/: test_adapters.py  test_clinc150.py  test_domain_classifier.py  test_gating.py  test_integration.py  test_methods.py  test_metrics.py  test_replay_buffer.py
