[project]
name = "dual-replay-reproduce"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "peft>=0.7",
    "datasets>=2.16",
    "accelerate>=0.25",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "tqdm",
    "scipy",
    "pytest",
]
